# HighGrabber

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/highgrabber/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  download.py  extract.py  filters.py  parse.py
